Set static height for FB-Like Widget - Fixes #8
Set static height for FB-Like Hardcoded Sidebar Widget - Fixes #8
— The box now has a static height and so the Sidebar, which stupidly
places all sidebar widgets “absolutely positioned” now recognizes the
rendered height of the facebook like widget and so it properly places
it and the elements after it without covering up the FB-Like box due to
not giving it enough space….

--- a/wp-content/themes/mag-wp/css/colors/default.css
+++ b/wp-content/themes/mag-wp/css/colors/default.css
@@ -689,6 +689,9 @@ span._5mdd {
 
 
 /* Sidebar ? */
+.sidebar .widget {
+	background: #fff;
+}
 .sidebar .widget h3.title {
 }
 .widget.widget_ultimate_posts {
@@ -713,6 +716,11 @@ span._5mdd {
     height: 214px;
 }
 */
+.fb-page.fb_iframe_widget {
+	height: 214px;
+	min-height: 214px;
+	display: block;
+}
 /* Album review - Sidebar widget */
 .upw-posts .album_review {
     width: 47%;
@@ -730,7 +738,6 @@ span._5mdd {
 .upw-posts .album_review .entry-meta {
     font-size: 10px;
 }
-
 
 
 
